./weston --help shall print to stdout
Submitted by Dilian
Assigned to Wayland bug list
Link to original bug (#106574)
Description
The "usage()" output shall go to stderr, when an weston is called in an invalid way.
weston --help
is a valid call and the output then shall go to stdout.
The program --help|less
mechanism -- hence --help output to stdout, works with all other programs I am aware of.
Version: 1.5.0